[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/PauseMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://Models/final_models/Windmill.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Player/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Models/final_models/Plateau.tscn" type="PackedScene" id=5]
[ext_resource path="res://Other Scripts/Windmill_Count.gd" type="Script" id=6]
[ext_resource path="res://Fonts/PSXBASIC_1.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Models/Materials/easteregg.tres" type="Material" id=8]
[ext_resource path="res://scenes/Monster/Monster.tscn" type="PackedScene" id=9]

[sub_resource type="PlaneMesh" id=1]

[sub_resource type="BoxShape" id=2]
extents = Vector3( 11.9852, 1.12285, 11.8081 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=5]
size = 18
font_data = ExtResource( 7 )

[node name="World" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.01374, -7.62939e-06, 0.765213 )

[node name="Plateau" parent="." instance=ExtResource( 5 )]
transform = Transform( 14, 0, 0, 0, 1.129, 0, 0, 0, 14, -1.50455, -0.181303, 0.263706 )

[node name="Windmill" parent="." instance=ExtResource( 3 )]
transform = Transform( 1.76117, 0, -0.947777, 0, 2, 0, 0.947777, 0, 1.76117, 22.0161, 18.7455, -66.5297 )

[node name="Windmill2" parent="." instance=ExtResource( 3 )]
transform = Transform( 1.36167, 0, -1.46487, 0, 2, 0, 1.46487, 0, 1.36167, 55.7972, 18.7455, -0.168602 )

[node name="Windmill3" parent="." instance=ExtResource( 3 )]
transform = Transform( -1.95544, 0, 0.419817, 0, 2, 0, -0.419817, 0, -1.95544, -42.8717, 18.7455, 37.5143 )

[node name="Windmill4" parent="." instance=ExtResource( 3 )]
transform = Transform( -1.91427, 0, -0.579299, 0, 2, 0, 0.579299, 0, -1.91427, 17.4069, 18.7455, 87.2476 )

[node name="Windmill5" parent="." instance=ExtResource( 3 )]
transform = Transform( 1.64072, 0, 1.14369, 0, 2, 0, -1.14369, 0, 1.64072, -73.9078, 18.7455, -44.3629 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1.19249e-08, 1, 0, -1, 1.19249e-08, 0, 0, 0 )
light_energy = 0.25

[node name="KinematicBody" parent="." instance=ExtResource( 4 )]
transform = Transform( -0.999265, 0, 0.0383177, 0, 1, 0, -0.0383177, 0, -0.999265, -38.9095, 20.2996, 19.6898 )

[node name="Monster" parent="." instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 32.2423, 18.9254, -13.4793 )

[node name="Easteregg" type="MeshInstance" parent="."]
transform = Transform( 1.44692, -0.263659, -0.00249477, 0, 0.00946169, -0.999955, 0.395507, 0.964569, 0.00912687, -28.1912, 5.60058, 89.7981 )
mesh = SubResource( 1 )
material/0 = ExtResource( 8 )

[node name="Easteregg2" type="MeshInstance" parent="."]
transform = Transform( 1.382, 0.388753, 0.00367843, 0, 0.00946169, -0.999955, -0.583154, 0.921294, 0.00871739, 66.5103, 5.60058, 72.0958 )
mesh = SubResource( 1 )
material/0 = ExtResource( 8 )

[node name="Easteregg3" type="MeshInstance" parent="."]
transform = Transform( 0.63902, -0.904709, 0.00367842, 0.0141807, 0.000385985, -0.999955, 1.357, 0.42603, 0.00871739, -85.618, 5.45048, 73.5717 )
mesh = SubResource( 1 )
material/0 = ExtResource( 8 )

[node name="FallDeath" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.74742, 22.8284, -4.05849 )
gravity = 0.0

[node name="CollisionShape" type="CollisionShape" parent="FallDeath"]
transform = Transform( 14, 0, 0, 0, 1, 0, 0, 0, 14, 0, -26.4735, 0 )
shape = SubResource( 2 )

[node name="PauseMenu" parent="." instance=ExtResource( 1 )]

[node name="UI" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InteractionLabel" type="Label" parent="UI"]
anchor_top = 0.916667
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -50.0
margin_bottom = -50.0
custom_fonts/font = SubResource( 3 )
text = "E to interact"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Windmill_Count" type="Label" parent="UI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -352.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 4 )
text = "Windmills activated: 0"
valign = 1
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Playtest_Build" type="Label" parent="UI"]
visible = false
margin_top = 29.0
margin_right = 265.0
margin_bottom = 69.0
custom_fonts/font = SubResource( 5 )
text = "Playtest build 2"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="windmill_count" from="Windmill" to="UI/Windmill_Count" method="update_windmill_count"]
[connection signal="windmill_count" from="Windmill2" to="UI/Windmill_Count" method="update_windmill_count"]
[connection signal="windmill_count" from="Windmill3" to="UI/Windmill_Count" method="update_windmill_count"]
[connection signal="windmill_count" from="Windmill4" to="UI/Windmill_Count" method="update_windmill_count"]
[connection signal="windmill_count" from="Windmill5" to="UI/Windmill_Count" method="update_windmill_count"]
[connection signal="slow_Player" from="Monster" to="KinematicBody" method="_slow_Player"]
[connection signal="body_entered" from="FallDeath" to="KinematicBody" method="_FallDeath_body_entered"]
[connection signal="num1" from="UI/Windmill_Count" to="Monster" method="_num1"]
[connection signal="num2" from="UI/Windmill_Count" to="Monster" method="_num2"]
[connection signal="num3" from="UI/Windmill_Count" to="Monster" method="_num3"]
[connection signal="num4" from="UI/Windmill_Count" to="Monster" method="_num4"]
